samples/_failures_safe/1761305929_970ef8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89f0ff86.c: In function ‘main’:
./samples/SAFE/__tmp_89f0ff86.c:151:28: error: expected ‘)’ at end of input
  151 |     if (add_matrices(&a, &b
      |                     ~      ^
      |                            )
./samples/SAFE/__tmp_89f0ff86.c:151:9: error: too few arguments to function ‘add_matrices’
  151 |     if (add_matrices(&a, &b
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_89f0ff86.c:100:5: note: declared here
  100 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_89f0ff86.c:151:5: error: expected declaration or statement at end of input
  151 |     if (add_matrices(&a, &b
      |     ^~
